--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <!--android:configChanges="orientation|screenSize"-->
+
+            <!-- android:configChanges="orientation|screenSize" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SelectContactActivity" />
+        <activity android:name=".SearchContactActivity"></activity>
     </application>
 
 </manifest>
